--- a/_posts/0000-01-02-AhmedAbdi177.md
+++ b/_posts/0000-01-02-AhmedAbdi177.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our Github Student slide!"
 ---
 Hi i changed the placeholder
 Use the left arrow to go back!
