--- a/_posts/0000-01-02-AhmedAbdi177.md
+++ b/_posts/0000-01-02-AhmedAbdi177.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our Github Student slide!"
 ---
-Hi i changed the placeholder here again
+Hi i changed the placeholder here again 🎉
 Use the left arrow to go back!
